# mlops_drift_pipeline

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: mlops.yml
model/: metadata.json
src/dashboard/: app.py
src/pipeline/: data.py  drift.py  pipeline.py  retrain.py  train.py
src/serve/: app.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data.py  test_drift.py  test_retrain.py  test_train.py
