[project]
name = "autogluon-mlops"
version = "0.1.0"
description = "Automated ML pipeline with drift detection, versioning, and CI/CD"
requires-python = ">=3.10,<3.12"
dependencies = [
    "kagglehub>=0.3.0",
    "autogluon-tabular[catboost,lightgbm,xgboost]>=1.5.0,<2.0.0",
    "evidently>=0.4.30,<0.5.0",
    "mlflow>=2.12.1,<3.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "kaggle>=1.6.0",
    "numpy<2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 120  # ← Increased from 88 to reduce E501 errors
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]  # ← Moved under [lint] section
ignore = [
    "E501",      # Line length (handled by Black/formatter)
    "F541",      # f-string without placeholders (harmless)
    "B904",      # raise from (optional best practice)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "pipeline", "serve", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
